# checkersNN

./: .gitignore  LICENSE  README.md
Checkers/: Checkers.cs
Checkers/models/: Board.cs  Display.cs  Game.cs  NNPlayer.cs  Player.cs
Engine/: BitBoard.cs  BitboardConstants.cs  BitboardHelpers.cs  CheckersEngine.cs  Constants.cs  Engine.csproj  Engine.slnx  GlobalUsings.cs  MaterialValue.cs  MoveGenerator.cs  MoveOrdering.cs  PieceColorExtensions.cs  SearchThread.cs  TranspositionTable.cs  Zobrist.cs
Engine/Evaluators/: Evaluator.cs
Engine/Magic/: KingCaptureMagic128.msgpack  KingCaptureMagic64.msgpack  KingMagic128.msgpack  KingMagic64.msgpack  MagicLibrary.cs  MagicPieceTable.cs
Engine/Models/: Move.cs  MoveUndoState.cs  NullMoveUndoState.cs  Piece.cs  PieceColor.cs  PieceType.cs
Engine/Pieces/: IPieceDefinition.cs  KingDefinition.cs  ManDefinition.cs
EngineTests/: AssemblyInfo.cs  EngineTests.csproj  GlobalUsings.cs  JsonXUnitSerializer.cs  KingDefinitionTests.cs  PieceDefinitionTestBase.cs  PieceTestCase.cs
NN/: CMakeLists.txt
NN/data/: checkers_config.json
NN/src/: checkers_NN.cpp
include/: checkers_NN.hpp
src/: checkersNN.cpp
